Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
gjs
gjs
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 101
    • Issues 101
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 16
    • Merge Requests 16
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI/CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • gjsgjs
  • Issues
  • #171

Closed
Open
Created Jun 17, 2018 by Ting-Wei Lan@lantwDeveloper

GNOME Shell always crashes with SIGBUS

It looks like it is broken by commit 729dad66. If I check out to its previous commit, GNOME Shell can be successfully started. The following messages are shown when GNOME Shell crashes. The GJS commit I used to test in this issue is e3511750:

(gnome-shell:26710): Gjs-WARNING **: 18:58:18.712: JS ERROR: Error: No property child on Gjs_ShowAppsIcon
_init@resource:///org/gnome/shell/ui/dash.js:49:9
wrapper@resource:///org/gnome/gjs/modules/_legacy.js:82:22
_parent@resource:///org/gnome/gjs/modules/_legacy.js:39:12
_init@resource:///org/gnome/shell/ui/dash.js:239:9
wrapper@resource:///org/gnome/gjs/modules/_legacy.js:82:22
_init@resource:///org/gnome/shell/ui/dash.js:406:30
wrapper@resource:///org/gnome/gjs/modules/_legacy.js:82:22
_Base.prototype._construct@resource:///org/gnome/gjs/modules/_legacy.js:18:5
Class.prototype._construct/newClass@resource:///org/gnome/gjs/modules/_legacy.js:114:32
_init@resource:///org/gnome/shell/ui/overviewControls.js:403:21
wrapper@resource:///org/gnome/gjs/modules/_legacy.js:82:22
_Base.prototype._construct@resource:///org/gnome/gjs/modules/_legacy.js:18:5
Class.prototype._construct/newClass@resource:///org/gnome/gjs/modules/_legacy.js:114:32
init@resource:///org/gnome/shell/ui/overview.js:247:26
wrapper@resource:///org/gnome/gjs/modules/_legacy.js:82:22
_initializeUI@resource:///org/gnome/shell/ui/main.js:191:5
start@resource:///org/gnome/shell/ui/main.js:133:5
@<main>:1:31

** Message: 18:58:18.712: Execution of main.js threw exception: Script <main> threw an exception
Assignee
Assign to
GNOME 3.30.0
Milestone
GNOME 3.30.0 (Past due)
Assign milestone
Time tracking
None
Due date
None